use better method